# shopai

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  todo
frontend/: gradio_app.py
src/assistant/: agent_tools.py  shoping_agent.py  test.py
src/db/: client.py  meili_client.py  q_client.py
src/encoder/: encoder.py
src/types/: agent_io.py  agent_output.py  encoder.py  filters.py  parse_links.py  products.py  search_params.py
src/utils/: build_filters.py  hybrid_search.py  image_handler.py  load_json_data.py  product_model.py
